--- a/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
@@ -3,6 +3,7 @@ description: A Flutter plugin for integrating Google Maps in iOS and Android app
 repository: https://github.com/flutter/packages/tree/main/packages/google_maps_flutter/google_maps_flutter
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+maps%22
 version: 2.14.1
+publish_to: none
 
 environment:
   sdk: ^3.8.0
@@ -21,9 +22,21 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter_android: ^2.16.1
-  google_maps_flutter_ios: ^2.15.4
-  google_maps_flutter_platform_interface: ^2.14.0
+  google_maps_flutter_android:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_android
+      ref: main
+  google_maps_flutter_ios:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_ios
+      ref: main
+  google_maps_flutter_platform_interface:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_platform_interface
+      ref: main
   google_maps_flutter_web: ^0.5.14
 
 dev_dependencies:
