--- a/packages/google_maps_flutter/google_maps_flutter_ios/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter_ios/pubspec.yaml
@@ -19,7 +19,11 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter_platform_interface: ^2.13.0
+  google_maps_flutter_platform_interface:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_platform_interface
+      ref: main
   stream_transform: ^2.0.0
 
 dev_dependencies:
