--- a/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
       url: https://github.com/OlehSv/packages.git
       path: packages/google_maps_flutter/google_maps_flutter_platform_interface
       ref: main
-  google_maps_flutter_web: ^0.5.14
+  google_maps_flutter_web:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_web
+      ref: main
 
 dev_dependencies:
   flutter_test:
