downgraded required version for google maps

--- a/packages/google_maps_flutter/google_maps_flutter_android/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter_android/pubspec.yaml
@@ -6,8 +6,8 @@ version: 2.18.8
 publish_to: none
 
 environment:
-  sdk: ^3.9.0
-  flutter: ">=3.35.0"
+  sdk: ^3.5.4
+  flutter: '>=3.24.5'
 
 flutter:
   plugin:
