--- a/packages/google_maps_flutter/google_maps_flutter_ios/example/ios14/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter_ios/example/ios14/pubspec.yaml
@@ -3,8 +3,8 @@ description: Demonstrates how to use the google_maps_flutter plugin.
 publish_to: none
 
 environment:
-  sdk: ^3.8.0
-  flutter: ">=3.32.0"
+  sdk: ^3.5.4
+  flutter: '>=3.24.5'
 
 dependencies:
   cupertino_icons: ^1.0.5
