--- a/packages/google_maps_flutter/google_maps_flutter_ios/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter_ios/pubspec.yaml
@@ -6,8 +6,8 @@ version: 2.15.8
 publish_to: none
 
 environment:
-  sdk: ^3.8.0
-  flutter: ">=3.32.0"
+  sdk: ^3.5.4
+  flutter: '>=3.24.5'
 
 flutter:
   plugin:
