--- a/packages/google_maps_flutter/google_maps_flutter/example/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter/example/pubspec.yaml
@@ -18,8 +18,17 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../
-  google_maps_flutter_android: ^2.16.1
-  google_maps_flutter_platform_interface: ^2.14.0
+  google_maps_flutter_android:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_android
+      ref: main
+
+  google_maps_flutter_platform_interface:
+    git:
+      url: https://github.com/OlehSv/packages.git
+      path: packages/google_maps_flutter/google_maps_flutter_platform_interface
+      ref: main
 
 dev_dependencies:
   build_runner: ^2.1.10
