hardcoded android sdk

--- a/packages/google_maps_flutter/google_maps_flutter_android/android/build.gradle
+++ b/packages/google_maps_flutter/google_maps_flutter_android/android/build.gradle
@@ -22,8 +22,8 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    namespace = "io.flutter.plugins.googlemaps"
-    compileSdk = flutter.compileSdkVersion
+    namespace 'io.flutter.plugins.googlemaps'
+    compileSdk = 36
 
     defaultConfig {
         minSdkVersion 24
